--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <canvas id="drawingCanvas" class="w-full rounded can"></canvas>
     
     
-    <div class="flex items-center mb-4" style="margin-top: 10px; margin-bottom:-10px; margin-left:10px;">
+    <div class="flex items-center mb-4" style="margin-top: 10px; margin-left:10px;">
 
         <button id="sendDrawing" class="ml-2  text-green-800 font-bold py-2 px-4 rounded  flex items-center">
             <i class="fas fa-paper-plane"></i>
