--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     body {
       background-color: #B6FFA1;
       font-family: 'Arial', sans-serif;overflow: hidden;
+      height:100vh;
     }
     canvas {
       border: 2px solid #333;
