--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       height:100vh;
     }
     canvas {
+      margin-top:-40px;
       border: 2px solid #333;
       border-radius: 8px;
       background-color: #8dff8fd3; /* Light background for the canvas */
