--- a/index.html
+++ b/index.html
@@ -17,26 +17,29 @@
       height:100vh;
     }
     canvas {
-      margin-top:-90px;
-      border: 2px solid #333;
-      border-radius: 8px;
-      background-color: #8dff8fd3; /* Light background for the canvas */
-      cursor: crosshair; /* Change cursor for drawing */
-    }
-
-    .can{
-        height: 170px;
-    }
+     background-color: #ffffff; /* Light background for the canvas */
+    border: 2px solid #333; /* Optional border */
+    border-radius: 8px; /* Rounded corners */
+    width: 100%; /* Full width */
+    height: 400px; /* Default height; you can adjust this */
+    max-height: 100vh; /* Limit the height to the viewport height */
+    position: relative; /* Allows for stacking with z-index */
+  }
+  
+  .can {
+      background-color: #059669;
+      height: 170px;
+      z-index: 0; /* Set to zero or higher if needed */
+      position: relative;
+  }
+  
     .chat-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      background-color: #ffffff00;
+      display: grid;
+      align-items: center;
+      justify-content: center;
+        background-color: #ffffff00;
       border-radius: 8px;
       padding: 1rem;
-      overflow-y: hidden;
 
     }
     .chat-message {
@@ -57,13 +60,15 @@
       flex-direction: column;
       align-items: flex-start;
     }
-    .chat-message img {
-      position: relative;
-      left: 25%;
-      margin-top: 0.5rem;
-      max-width: 50%;
-      border-radius: 4px;
-    }
+   .chat-message img {
+    position: relative;
+    left: 25%;
+    margin-top: 0.5rem;
+    max-width: 50%;
+    border-radius: 4px;
+
+}
+
 
     .tools{
     display: flex;
@@ -147,15 +152,20 @@ border-radius: 30px;
 .brush{
   color: #059669;
 }
+
+.tool{
+  position: absolute;
+  bottom: 20%;
+  left: 70px;
+  margin: 10px;
+}
   </style>
 </head>
 <body class="flex flex-col h-screen">
 
   <!-- Header -->
   <div class="flex items-center justify-between p-4 bg-green-600 text-white shadow">
-    <button id="backButton" class="focus:outline-none">
-      <i class="fas fa-arrow-left"></i>
-    </button>
+   
     <h1 class="text-xl font-semibold">Artistra</h1>
     <button id="googleLogin" class="ml-2 bg-gray-200 text-black font-bold py-2 px-4 rounded hover:bg-gray-100 flex items-center" >
         <i class="fab fa-google"></i>
@@ -165,8 +175,8 @@ border-radius: 30px;
   </div>
 
   <!-- Chat Container -->
-  <div class="flex-grow p-4 overflow-y-auto">
-    <div id="chat" class="space-y-4 chat-container"></div>
+  <div class="flex-grow overflow-y-auto">
+    <div id="chat" class=" chat-container"></div>
   </div>
 
   <!-- Drawing Canvas and Toolbar -->
@@ -210,7 +220,7 @@ border-radius: 30px;
     <canvas id="drawingCanvas" class="w-full rounded can"></canvas>
     
     
-    <div class="flex items-center mb-4" style="margin-top: 10px; margin-left:10px;">
+    <div class="flex items-center mb-4 tool" style="margin-top: 10px; margin-left:10px;">
 
         <button id="sendDrawing" class="ml-2  text-green-800 font-bold py-2 px-4 rounded  flex items-center">
             <i class="fas fa-paper-plane"></i>
