--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       margin-bottom: 20px;
       max-height: 25vh; /* Limit height for better mobile view */
       overflow-y: hidden; /* Allow scrolling */
+      
   }
   
   .chat-message {
@@ -69,33 +70,30 @@
       border-radius: 4px;
   }
   
-  .tools {
-      display: flex;
-      flex-direction: column; /* Stack vertically */
-      align-items: center; /* Center align items */
-      justify-content: center; /* Center justify items */
-      position: absolute; /* Use absolute positioning */
-      bottom: 10px; /* Position 10px from the bottom */
-      left: 50%; /* Center horizontally */
-      transform: translateX(-50%); /* Offset to truly center */
-      gap: 10px; /* Added gap for better spacing */
-  }
-  
-  #colorPicker {
-      width: 100%; /* Full width */
-      height: 30px;
-      border-radius: 30px;
-  }
-  
-  .section {
+  .tools{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
+    }
+
+    #colorPicker{
+width: 100%;
+height: 30px;
+border-radius: 30px;
+    }
+
+    .section{
       width: 90%;
       background-color: #f9f9f9;
-      padding: 15px; /* Adjusted padding */
+      padding: 15px;
       display: flex;
       align-items: center;
       justify-content: center;
       margin: 10px;
-  }
+    }
+
   
   #brushSize {
       -webkit-appearance: none; /* Remove default styling in Webkit browsers */
