--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       padding: 1rem;
       margin-bottom: 20px;
       max-height: 25vh; /* Limit height for better mobile view */
-      overflow-y: hidden; /* Allow scrolling */
+      overflow-y: auto; /* Allow scrolling */
       
   }
   
