--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@ border-radius: 30px;
       }
   }
   
+  #closeModal{
+z-index: 1000;
+  }
   </style>
 </head>
 <body class="flex flex-col h-screen">
